# tfgraph

./: .gitignore  CHANGES.md  Makefile  README.md  owl-tensorflow.opam
doc/: notes.md  spec.md
examples/: diff.ml  diff_hypothetical.ml
src/: dune  owl_tensorflow.ml
src/backend/: tfgraph_execute.ml
src/core/: tfgraph_attr.ml  tfgraph_collection.ml  tfgraph_graph.ml  tfgraph_graph_base.ml  tfgraph_meta.ml  tfgraph_node.ml  tfgraph_saver.ml  tfgraph_types.ml  tfgraph_utils.ml  trgraph_saver.ml
src/owlfrontend/: owl_converter.ml  owl_converter_graph.ml
