opam-version: "2"
maintainer: "Roger Stark <rho.ajax@gmail.com>"
authors: [ "Roger Stark" ]
license: "MIT"
homepage: "https://github.com/owlbarn/tfgraph"
dev-repo: "git+https://github.com/owlbarn/tfgraph.git"
bug-reports: "https://github.com/owlbarn/tfgraph/issues"
doc: "https://owlbarn.github.io/tfgraph/"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build}
  "owl-base"
  "ocaml-protoc"
]

available: [ ocaml-version >= "4.06.0" ]
